blog align fix

--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -3800,7 +3800,7 @@ ul.who_we_are_ul_2 li::before {
   }
   .blog-share {
     position: relative;
-    left: 17%;
+    left: 20%;
     bottom: 2px;
   }
   .share-icons {
@@ -3809,6 +3809,14 @@ ul.who_we_are_ul_2 li::before {
   }
   .navbar_logo_box{
     flex-basis: 8%;
+    position: relative;
+    right: 20%;
+  }
+  .blog-card .author {
+    position: relative;
+    right: 20%;
+  }
+  .blog-card .ftr .stats {
     position: relative;
     right: 20%;
   }
